# cl-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLFW.cmake  FindJsonCpp.cmake  FindOpenCL.cmake
data/kernel/: particles.cl
data/shader/: compute.glsl  fragment.glsl  vertex.glsl
src/: app.cc  app.h  asset.cc  asset.h  input.cc  input.h  log.h  main.cc  math_helper.h  particle.h  timer.cc  timer.h
src/compute/: kernel.cc  kernel.h  mcl.cc  mcl.h
src/graphics/: fbo.cc  fbo.h  program.cc  program.h  sprite.cc  sprite.h  texture.cc  texture.h
src/state/: governor.cc  governor.h  state.h
